k8s-react/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: demo-react-app
spec:
    type: ClusterIP
    selector:
        app: demo-react-app
    ports:
      - port: 3000
        targetPort: 3000
        protocol: TCP
        #nodePort: 31000
