k8s-react/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: www.devopslearning.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-react-app
            port:
              number: 3000
  tls:
  - hosts:
    - www.devopslearning.live
    secretName: ingress-testing
